- Alte Sprachpacks (in lowercase) entfernt
! Warnung bei Installations, wenn bereits eine beschriebene Konfiguration
  besteht. "Wenn du Updaten willst, bitte benutze..."
# Fixed Module Badwords (Denkfehler)
! Module sind nun in die Datenbank eingetragen und werden von dort auch
  richtig ausgelesen. Somit nicht länger manuell in die Variable 
  $active_modules eintragen, sondern direkt in die Datenbank. Installer folgt.
- Removed SQL Tables (prefix_disallow, prefix_vote usw.)
! Login.php nun vollständig für Mehrsprachigkeit ausgelegt, weitere folgen.
- Removed includes/captcha from SVN Repo
- Removed includes/ftp from SVN Repo
? Antibruteforce (Admin Login)
? Viele Dateien in admin/ (u. a. login.php) haben noch alte Codesysteme.
  Das heißt: keine PEAR Standarts, $_POST statt $globals usw.
? Mehrsprachigkeit wieder integrieren (Code anpassen)
? qUsers und qSessions fertigstellen und die alten Funktionen ersetzen
? Passwörter nicht mehr im Klartext hasen (Salz für Passwörter!)

=========================== Release 0.2.4 =====================================

+ Beiträge/Kommentare bearbeiten
# Kommentare werden nicht in die DB eingetragen
# Funktion generate_quote(): Fehler behoben, wenn ID nicht in der Datenbank vorhanden
# Sicherheitslücke beim Zitieren gefixt
! Nach dem automatisch generierten Zitat-Code wird nun ein Zeilenumbruch eingefügt
+ Wiederaufbau des Formulars mit Fehlermeldung, wenn etwas "falsch war" (z. B. "Email enspricht nicht der Norm!")
# Fixed words_cut(): Zeilenumbrüche wurden nicht als Zwischenzeichen gezählt. Somit wurde teilweise zu Unrecht gekürzt.
# Fixed RSS Feed: Funktioniert wieder; Template neu geschrieben, jetzt auch valid.
* HTMLMimmeMail5 aktualisiert
! StringParser_BBCode aktualisiert
# Mögliche XXS Sicherheitslücke in bbcode_image() behoben
* XHTML Anpassungen (overall_header.html)
+ Smilies bearbeiten

===============================================================================