@@ -113,9 +113,9 @@ $guestbook_days = round((time() - $config_table['startdate']) / 86400);
 $guestbook_date = format_date($config_table['startdate']);
 $posts_per_day = sprintf("%.2f Einträge pro Tag", $posts_count / $guestbook_days);
 $post_per_day_desc = ($guestbook_days > 1) ? $lang['days'] : $lang['day'];
-$register_globals = (ini_get('register_globals') == '1') ? "<font color=\"#CA3200\">" . $lang['switchted_on'] . "</font>" : "<font color=\"#00CA0F\">" . $lang['switchted_off'] . "</font>";
-$safe_mode = (ini_get('safe_mode') == '1') ? "<font color=\"#00CA0F\">" . $lang['Switchted_On'] . "</font>" : "<font color=\"#CA3200\">" . $lang['switchted_off'] . "</font>";
-$magic_quotes_gpc = (ini_get('magic_quotes_gpc') == '1') ? "<font color=\"#00CA0F\">" . $lang['switchted_on'] . "</font>" : "<font color=\"#CA3200\">" . $lang['switchted_off'] . "</font>";
+$register_globals = (ini_get('register_globals') == '1') ? "<font color=\"#CA3200\"><b>" . $lang['switchted_on'] . "</b></font>" : "<font color=\"#00CA0F\"><b>" . $lang['switchted_off'] . "</b></font>";
+$safe_mode = (ini_get('safe_mode') == '1') ? "<font color=\"#00CA0F\"><b>" . $lang['Switchted_On'] . "</b></font>" : "<font color=\"#CA3200\"><b>" . $lang['switchted_off'] . "</b></font>";
+$magic_quotes_gpc = (ini_get('magic_quotes_gpc') == '1') ? "<font color=\"#00CA0F\"><b>" . $lang['switchted_on'] . "</b></font>" : "<font color=\"#CA3200\"><b>" . $lang['switchted_off'] . "</b></font>";
 $wait_list_count = ($wait_list_count > 0) ? $wait_list_count . ' Einträge' : 'Keine Eintraege';
 $posts_count = ($posts_count > 0) ? $posts_count . ' Einträge' : 'Keine Eintraege';
 $install_dir_exists = (is_dir($root_dir.'install')) ? "<br /><font color=\"#CA3200\"><b>Achtung: Das Installationverzeichniss wurde noch nicht geloescht!</b></font>" : "";
